--- a/modern-java8/gradle.properties
+++ b/modern-java8/gradle.properties
@@ -5,6 +5,7 @@ serviceName=modern-java8
 # Version dependencies for PowerMockito and JUnit
 junitJupiterVersion=5.7.0
 lombookVersion=1.18.20
+assertJVersion=3.19.0
 
 #Constant for projects, all below are for plugins version and build
 javaVersion=11
