--- a/modern-java/gradle.properties
+++ b/modern-java/gradle.properties
@@ -1,7 +1,7 @@
 # This is definition of service and version, you can change here
 group=com.pratap
 version=1.0.0-SNAPSHOT
-serviceName=modern-java8
+serviceName=modern-java
 # Version dependencies for PowerMockito and JUnit
 junitJupiterVersion=5.7.0
 lombookVersion=1.18.20
