upgrade configuration wrt gradle 7 and jdk 17

--- a/modern-java8/build.gradle
+++ b/modern-java8/build.gradle
@@ -23,8 +23,8 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:'+"${lombookVersion}"
     annotationProcessor 'org.projectlombok:lombok:'+"${lombookVersion}"
-    testCompile 'org.junit.jupiter:junit-jupiter-api:'+"${junitJupiterVersion}"
-    testCompile 'org.junit.jupiter:junit-jupiter-engine:'+"${junitJupiterVersion}"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:'+"${junitJupiterVersion}"
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:'+"${junitJupiterVersion}"
     testImplementation  'org.assertj:assertj-core:'+"${assertJVersion}"
 
 }
